--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                     <nav class="header__nav">
                         <nav class="nav">
                             <ul class="nav__list">
-                                <li><a href="#!">О комплексе</a></li>
+                                <li><a href="#!">О комплексе:</a></li>
                                 <li><a href="#!">Район</a></li>
                                 <li><a href="#!">Каталог квартир</a></li>
                                 <li><a href="#!">Ипотека</a></li>
